--- a/src/style.css
+++ b/src/style.css
@@ -37,8 +37,9 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: 1.6em;
+  line-height: 0.8;
+  color: rgb(144, 40, 40);
 }
 
 button {
